<resources>
    <string name="app_name">Aro_Passenger</string>
    <string name="jd">Journey Date</string>
    <string name="date">22 Dec 2020</string>
    <string name="day">(Tue)</string>
    <string name="rd">Return Date</string>
    <string name="date2">23 Dec 2020</string>
    <string name="day2">(Wed)</string>
    <string name="from">From</string>
    <string name="city">Enter from city</string>
    <string name="to">To</string>
    <string name="destination">Enter destination city</string>
    <string name="no_of_pass">Number of Pasengers</string>
    <string name="people">1-8</string>
    <string name="choose_vehicle">Choose A Vehicle</string>
    <string name="enter_from_city">Enter from city</string>
    <string name="one_hour">1 Hour Package</string>
    <string name="to_airport">To Airport</string>
    <string name="select_airport">Select airport</string>
    <string name="trip_package">Trip Package</string>
    <string name="welcome_aro">Welcome to Aro a passionate travellers destination</string>
    <string name="ninty_one">+91</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="fp">Forgot password?</string>
    <string name="dont_have_acc">Dont have an account yet?</string>
    <string name="sign_up">SignUp</string>
    <string name="version">Version 1.0.0</string>
    <string name="n">Name*</string>
    <string name="Email">Email*</string>
    <string name="Cp">Confirm Password</string>
    <string name="SignUP">SIGNUP</string>
    <string name="recovery">Password Recovery</string>
    <string name="registerd_mobile">Enter your registered Mobile Number</string>
    <string name="submit">SUBMIT</string>
    <string name="passRec">Password Recovery</string>
</resources>